# Blitztext

./: .gitignore  BUILD.md  PLAN.md  README.md  build.spec  main.py  requirements.txt
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  sidecar.rs
app/src/components/: MetaPanel.tsx  ProcessingBanner.tsx  Sidebar.tsx  SpeakerList.tsx  TranscriptView.tsx
app/src/lib/: rpc.ts  types.ts
app/src/state/: useMeetingStore.ts
app/src/styles/: tokens.css
app/src/views/: Library.tsx  MeetingImport.tsx  MeetingReview.tsx  Settings.tsx
config/: defaults.py  settings.py
core/: audio.py  clipboard.py  hotkey.py  injector.py  llm.py  log.py  migration.py  transcription.py  tts.py  update_installer.py  updater.py  voice_download.py
installer/: blitztext.iss  voicetype.iss
sidecar/: __init__.py  __main__.py  _smoke_cleanup.py  _smoke_e2e.py  _smoke_merger.py  _smoke_store.py  audio_io.py  diarization.py  meeting_pipeline.py  meeting_store.py  merger.py  methods.py  requirements.txt  rpc.py  rpc_schema.md
ui/: download_dialog.py  home_window.py  recording_overlay.py  settings_window.py  tray.py  update_dialog.py
