[package]
name = "blitztext"
version = "0.1.0"
description = "Blitztext — local speech-to-text and meeting transcription"
authors = ["Julius Sima"]
license = ""
repository = "https://github.com/julasim/Blitztext"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
